gitops/argocd/ckcp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kcp-in-a-pod
  name: ckcp-service
spec:
  selector:
    app: kcp-in-a-pod
  ports:
  - port: 6443
    protocol: TCP
    targetPort: 6443
