gitops/argocd/ckcp/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: kcp-in-a-pod
  name: ckcp
spec:
  to:
    kind: Service
    name: ckcp-service
  port:
    targetPort: 6443
  tls:
    termination: passthrough
  wildcardPolicy: None
